<resources>
    <string name="app_name">Burpee Buddy</string>
    <string name="implementation_not_ready">This feature is coming soon.</string>
    <string name="snack_avoid_clicks">For push-up like exercises, lock your phone to avoid accidental clicks.</string>
    <string name="action_stop">STOP</string>
    <string name="title_settings">Settings</string>
    <string name="title_workout">Workout</string>
    <string name="title_main">Burpee buddy</string>
    <string name="notification_description">Buddy workout notification</string>
    <string name="reps">reps</string>
    <string name="goal_type_reps">reps</string>
    <string name="goal_type_time">time</string>
    <string name="start_workout">Start workout</string>
    <string name="stop">STOP</string>
    <string name="database_name">buddy-db</string>
    <string name="add_workout">Add workout</string>
    <string name="exercise_dialog_reps">Reps</string>
    <string name="exercise_dialog_reps_proxy">Reps measured with the proximity sensor</string>
    <string name="exercise_dialog_weight">Weight</string>
    <string name="exercise_dialog_distance">Distance</string>
    <string name="exercise_dialog_time">Time</string>
    <string name="exercise_dialog_metrics">Relevant metrics</string>
    <string name="exercise_dialog_exercise_name">Exercise name</string>
    <string name="exercise_dialog_name_error">Please enter a valid name</string>
    <string name="delete">Delete</string>
    <string name="exercise_dialog_edit_exercise">Edit exercise</string>
    <string name="exercise_dialog_add_exercise">Add exercise</string>
    <string name="goal_dialog_break">Break</string>
    <string name="goal_dialog_duration">Duration</string>
    <string name="goal_dialog_reps">Reps</string>
    <string name="goal_dialog_sets">Sets</string>
    <string name="auto_start_break_uncountable">Automatically start break for rep based exercises.</string>
    <string name="auto_start_break_countable">Automatically start break for exercises measured with the proximity sensor.</string>
    <string name="auto_start_break_time_based">Automatically start break for time based exercises.</string>
    <string name="dialog_stop_workout">Stop workout?</string>
    <string name="dialog_set_finished">Set finished</string>
    <string name="dialog_start_break">Start break</string>
    <string name="dialog_reps_per_min">reps/min</string>
    <string name="congratulations">Congratulations! You have finished the workout.</string>
    <string name="title_goals">Goals</string>
    <string name="title_exercises">Exercises</string>
    <string name="title_statistics">History</string>
    <string name="reps_per_min">reps/min</string>
    <string name="days">days</string>
    <string name="min">min</string>
    <string name="title_challenges">Challenges</string>
    <string name="select_all">Select all</string>
    <string name="edit">Edit</string>
    <string name="reminder_notification_description">Daily reminder</string>
</resources>
