<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/settingsFragment"
        android:title="@string/title_settings"
        android:icon="@drawable/ic_settings"/>
    <item android:id="@+id/statisticsFragment"
        android:title="@string/title_statistics"
        android:icon="@drawable/ic_trending"/>

    <item android:id="@+id/challengesFragment"
        android:title="@string/title_challenges"
        android:icon="@drawable/ic_star_outline"/>

    <item android:id="@+id/exercisesFragment"
        android:title="@string/title_exercises"
        android:icon="@drawable/ic_edit"/>

    <item android:id="@+id/goalsFragment"
        android:title="@string/title_goals"
        android:icon="@drawable/ic_edit"/>
</menu>